--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,26 +1,42 @@
-*,::after,::before{
-  margin : 0;
+*,
+::after,
+::before {
+  margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Julius Sans One', sans-serif;
-  background: linear-gradient(90deg, #0E0D0D 50%, #FEFCFC 50%);
+  font-family: "Julius Sans One", sans-serif;
+  background: linear-gradient(90deg, #0e0d0d 50%, #fefcfc 50%);
 }
 
 @keyframes boxMagic {
-  from{
-      box-shadow: 
-      0 0 0 #FEFCFC,
-      0 0 0 #FEFCFC,
-      0 0 0 #FEFCFC,
-      0 0 0 #FEFCFC;
+  from {
+    box-shadow: 0 0 0 #fefcfc, 0 0 0 #fefcfc, 0 0 0 #fefcfc, 0 0 0 #fefcfc;
   }
-  to{
-      box-shadow:
-      -5px -5px 0 #FEFCFC,
-      5px -5px 0 #FEFCFC,
-      -5px 5px 0 #FEFCFC,
-      5px 5px 0 #FEFCFC;
+  to {
+    box-shadow: -5px -5px 0 #fefcfc, 5px -5px 0 #fefcfc, -5px 5px 0 #fefcfc,
+      5px 5px 0 #fefcfc;
+  }
+}
+
+@keyframes nope {
+  0% {
+    transform: translateX(0px);
+  }
+  20% {
+    transform: translateX(-10px);
+  }
+  40% {
+    transform: translateX(10px);
+  }
+  60% {
+    transform: translateX(-10px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0px);
   }
 }
