--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,3 +64,15 @@ body {
     transform: scale(1);
   }
 }
+
+@keyframes temp {
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
