--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@
 body {
   font-family: "Julius Sans One", sans-serif;
   background: linear-gradient(90deg, #0e0d0d 50%, #fefcfc 50%);
+  overflow-x: hidden;
 }
 
 @keyframes boxMagic {
@@ -58,7 +59,7 @@ body {
 
 @keyframes apparition {
   from {
-    transform: scale(0);
+    transform: scale(0.1);
   }
   to {
     transform: scale(1);
