--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,10 @@ body {
 }
 
 @keyframes perte {
+  0% {
+    transform: scale(8);
+    top: -25%;
+  }
   100% {
     transform: scale(1);
     top: 0%;
